--- a/k8s/apps/fantrax-pl-team-manager/kustomization.yaml
+++ b/k8s/apps/fantrax-pl-team-manager/kustomization.yaml
@@ -8,6 +8,7 @@ labels:
 resources:
 - deploy.yaml
 - sealed-fantrax-cookie.yaml
+- sealed-odds-api-key.yaml
 
 images:
 - name: zach17/fantrax-pl-team-manager
