feat: bump argocd timeout reconciliation

--- a/k8s/apps/argocd/helm/values.yaml
+++ b/k8s/apps/argocd/helm/values.yaml
@@ -1,4 +1,6 @@
 configs:
+  cm:
+    timeout.reconciliation: 30s
   repositories:
     zbialik-homelab-repo:
       url: https://github.com/zbialik/homelab.git
