--- a/k8s/apps/cilium/helm/values.yaml
+++ b/k8s/apps/cilium/helm/values.yaml
@@ -1,7 +1,7 @@
-l2announcements:
-  enabled: true
-k8sClientRateLimit.qps: 30
-k8sClientRateLimit.burst: 100
-k8sServiceHost: 192.168.0.248
-k8sServicePort: 6443
+# l2announcements:
+#   enabled: true
+# k8sClientRateLimit.qps: 30
+# k8sClientRateLimit.burst: 100
+# k8sServiceHost: 192.168.0.248
+# k8sServicePort: 6443
 kubeProxyReplacement: true
