--- a/k8s/apps/metallb/kustomization.yaml
+++ b/k8s/apps/metallb/kustomization.yaml
@@ -1,7 +1,9 @@
 kind: Kustomization
 namespace: metallb-system
-commonLabels:
-  app.zb/name: metallb
+labels:
+- includeSelectors: true
+  pairs:
+    app: metallb
 
 resources:
 - generated.yaml
