--- a/k8s/apps/argocd/helm/values.yaml
+++ b/k8s/apps/argocd/helm/values.yaml
@@ -49,6 +49,8 @@ redis:
 server:
   ingress:
     enabled: true
+    annotations: 
+      cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
     hostname: "argocd.zeb17-int.duckdns.org"
     tls: true
   resources:
