add a traefik annotation to argocd ingress

--- a/k8s/apps/argocd/helm/values.yaml
+++ b/k8s/apps/argocd/helm/values.yaml
@@ -51,6 +51,7 @@ server:
     enabled: true
     annotations: 
       cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hostname: "argocd.zeb17-int.duckdns.org"
     tls: true
   resources:
