--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -27002,6 +27002,7 @@ metadata:
     app.kubernetes.io/version: "v3.2.3"
   annotations:
     cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
   rules:
     - host: argocd.zeb17-int.duckdns.org
