set tls termination for argocd ingress

--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -27003,6 +27003,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   rules:
     - host: argocd.zeb17-int.duckdns.org
