--- a/k8s/apps/argocd/helm/values.yaml
+++ b/k8s/apps/argocd/helm/values.yaml
@@ -1,5 +1,6 @@
 configs:
   cm:
+    server.insecure: "true"
     timeout.reconciliation: 30s
   repositories:
     zbialik-homelab-repo:
@@ -52,8 +53,6 @@ server:
     annotations: 
       cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
       traefik.ingress.kubernetes.io/router.entrypoints: websecure
-      traefik.ingress.kubernetes.io/router.tls: "true"
-
     hostname: "argocd.zeb17-int.duckdns.org"
     tls: true
   resources:
