--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -213,7 +213,7 @@ data:
   statusbadge.enabled: "false"
   timeout.hard.reconciliation: 0s
   timeout.reconciliation: 30s
-  url: https://argocd.example.com
+  url: https://argocd.zeb17-int.duckdns.org
 ---
 # Source: argo-cd/templates/argocd-configs/argocd-cmd-params-cm.yaml
 apiVersion: v1
@@ -25448,7 +25448,7 @@ spec:
     metadata:
       annotations:
         checksum/cmd-params: cbd1ca3ab4f2122ec7aab52eba087e9f0b3b8813ea2c1b042c0eed6c961ea467
-        checksum/cm: ae5fce851517c700c7d34e2af1247aee3d5dae4583b5947459739b278aabf871
+        checksum/cm: 137c576050e5bd73013ac9d217e71d2c8e80649f87d181698d6130024c71e7dc
       labels:
         helm.sh/chart: argo-cd-9.2.3
         app.kubernetes.io/name: argocd-repo-server
@@ -25885,7 +25885,7 @@ spec:
     metadata:
       annotations:
         checksum/cmd-params: cbd1ca3ab4f2122ec7aab52eba087e9f0b3b8813ea2c1b042c0eed6c961ea467
-        checksum/cm: ae5fce851517c700c7d34e2af1247aee3d5dae4583b5947459739b278aabf871
+        checksum/cm: 137c576050e5bd73013ac9d217e71d2c8e80649f87d181698d6130024c71e7dc
       labels:
         helm.sh/chart: argo-cd-9.2.3
         app.kubernetes.io/name: argocd-server
@@ -26609,7 +26609,7 @@ spec:
     metadata:
       annotations:
         checksum/cmd-params: cbd1ca3ab4f2122ec7aab52eba087e9f0b3b8813ea2c1b042c0eed6c961ea467
-        checksum/cm: ae5fce851517c700c7d34e2af1247aee3d5dae4583b5947459739b278aabf871
+        checksum/cm: 137c576050e5bd73013ac9d217e71d2c8e80649f87d181698d6130024c71e7dc
       labels:
         helm.sh/chart: argo-cd-9.2.3
         app.kubernetes.io/name: argocd-application-controller
