--- a/k8s/apps/traefik/helm/values.yaml
+++ b/k8s/apps/traefik/helm/values.yaml
@@ -2,3 +2,11 @@ tlsStore:
   default:
     defaultCertificate:
       secretName: wildcard-zeb17-internal
+
+certificatesResolvers:
+  default:
+    acme:
+      email: "zachary.e.bialik@gmail.com"
+      storage: "/data/acme.json"
+      httpChallenge:
+        entryPoint: "web"
