--- a/k8s/apps/argocd/traefik-ingress-route.yaml
+++ b/k8s/apps/argocd/traefik-ingress-route.yaml
@@ -13,6 +13,7 @@ spec:
       services:
         - name: argocd-server
           port: 80
+          scheme: http
     - kind: Rule
       match: Host(`argocd-server.zeb17-int.duckdns.org`) && Header(`Content-Type`, `application/grpc`)
       priority: 11
