--- a/k8s/apps/traefik/generated.yaml
+++ b/k8s/apps/traefik/generated.yaml
@@ -18704,6 +18704,43 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+      - secrets
+      - configmaps
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - gateway.networking.k8s.io
+    resources:
+      - backendtlspolicies
+      - gatewayclasses
+      - gateways
+      - grpcroutes
+      - httproutes
+      - referencegrants
+      - tcproutes
+      - tlsroutes
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - gateway.networking.k8s.io
+    resources:
+      - backendtlspolicies/status
+      - gatewayclasses/status
+      - gateways/status
+      - grpcroutes/status
+      - httproutes/status
+      - tcproutes/status
+      - tlsroutes/status
+    verbs:
+      - update
 ---
 # Source: traefik/templates/rbac/clusterrolebinding.yaml
 kind: ClusterRoleBinding
@@ -18858,13 +18895,12 @@ spec:
           - "--providers.kubernetesingress"
           - "--providers.kubernetesingress.allowEmptyServices=true"
           - "--providers.kubernetesingress.ingressendpoint.publishedservice=traefik/traefik"
+          - "--providers.kubernetesgateway"
+          - "--providers.kubernetesgateway.statusaddress.service.name=traefik"
+          - "--providers.kubernetesgateway.statusaddress.service.namespace=traefik"
           - "--entryPoints.websecure.http.tls=true"
           - "--log.level=INFO"
         
-          - "--certificatesresolvers.default.acme.email=zachary.e.bialik@gmail.com"
-          - "--certificatesresolvers.default.acme.httpChallenge.entryPoint=web"
-          - "--certificatesresolvers.default.acme.storage=/data/acme.json"
-          
         env:
           - name: POD_NAME
             valueFrom:
@@ -18902,6 +18938,37 @@ metadata:
   name: traefik
 spec:
   controller: traefik.io/ingress-controller
+---
+# Source: traefik/templates/gateway.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: traefik-gateway
+  namespace: traefik
+  labels:
+    app.kubernetes.io/name: traefik
+    app.kubernetes.io/instance: traefik-traefik
+    helm.sh/chart: traefik-38.0.2
+    app.kubernetes.io/managed-by: Helm
+spec:
+  gatewayClassName: traefik
+  listeners:
+    - name: web
+      port: 8000
+      protocol: HTTP
+---
+# Source: traefik/templates/gatewayclass.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: GatewayClass
+metadata:
+  name: traefik
+  labels:
+    app.kubernetes.io/name: traefik
+    app.kubernetes.io/instance: traefik-traefik
+    helm.sh/chart: traefik-38.0.2
+    app.kubernetes.io/managed-by: Helm
+spec:
+  controllerName: traefik.io/gateway-controller
 ---
 # Source: traefik/templates/tlsstore.yaml
 apiVersion: traefik.io/v1alpha1
