add traefik-gateway namespace

--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -27004,6 +27004,7 @@ metadata:
 spec:
   parentRefs:
     - name: traefik-gateway
+      namespace: traefik
   hostnames:
     - argocd.zeb17-int.duckdns.org
   rules:
