--- a/k8s/apps/argocd/traefik-ingress-route.yaml
+++ b/k8s/apps/argocd/traefik-ingress-route.yaml
@@ -8,13 +8,13 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.example.com`)
+      match: Host(`argocd.zeb17-int.duckdns.org`)
       priority: 10
       services:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.example.com`) && Header(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.zeb17-int.duckdns.org`) && Header(`Content-Type`, `application/grpc`)
       priority: 11
       services:
         - name: argocd-server
