--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -26987,6 +26987,39 @@ spec:
             path: profiler.enabled
       dnsPolicy: ClusterFirst
 ---
+# Source: argo-cd/templates/argocd-server/ingress.yaml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: argocd-server
+  namespace: argocd
+  labels:
+    helm.sh/chart: argo-cd-9.2.3
+    app.kubernetes.io/name: argocd-server
+    app.kubernetes.io/instance: argocd
+    app.kubernetes.io/component: server
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: argocd
+    app.kubernetes.io/version: "v3.2.3"
+  annotations:
+    cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
+spec:
+  rules:
+    - host: argocd.zeb17-int.duckdns.org
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 443
+  tls:
+    - hosts:
+      - argocd.zeb17-int.duckdns.org
+      secretName: argocd-server-tls
+---
 # Source: argo-cd/templates/redis-secret-init/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
