--- a/k8s/apps/ingress-nginx/kustomization.yaml
+++ b/k8s/apps/ingress-nginx/kustomization.yaml
@@ -25,6 +25,14 @@ patches:
       path: /spec/loadBalancerIP
       value: 192.168.1.100
 - target:
+    kind: IngressClass
+    name: nginx
+  patch: |-
+    - op: add
+      path: /metadata/annotations
+      value:
+        ingressclass.kubernetes.io/is-default-class: "true"
+- target:
     group: apps
     kind: Deployment
     name: ingress-nginx-controller
