--- a/k8s/apps/argocd/generated.yaml
+++ b/k8s/apps/argocd/generated.yaml
@@ -27003,6 +27003,9 @@ metadata:
     app.kubernetes.io/version: "v3.2.3"
   annotations:
     cert-manager.io/cluster-issuer: "cert-manager-webhook-duckdns-production"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
     - host: argocd.zeb17-int.duckdns.org
