--- a/k8s/apps/rook-ceph/kustomization.yaml
+++ b/k8s/apps/rook-ceph/kustomization.yaml
@@ -9,3 +9,12 @@ resources:
 - generated.yaml
 - ceph-cluster.yaml
 - ceph-block-pool.yaml
+
+patches:
+- target:
+    group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+  patch: |-
+    - op: add
+      path: /metadata/annotations/argocd.argoproj.io~1sync-options
+      value: "Replace=true"
