tmp uninstall cephcluster

--- a/k8s/apps/rook-ceph/generated.yaml
+++ b/k8s/apps/rook-ceph/generated.yaml
@@ -358,7 +358,7 @@ data:
   ROOK_ENABLE_DISCOVERY_DAEMON: "false"
   ROOK_USE_CSI_OPERATOR: "true"
   ROOK_CSI_ENABLE_RBD: "true"
-  ROOK_CSI_ENABLE_CEPHFS: "true"
+  ROOK_CSI_ENABLE_CEPHFS: "false"
   ROOK_CSI_DISABLE_DRIVER: "false"
   CSI_ENABLE_CEPHFS_SNAPSHOTTER: "true"
   CSI_ENABLE_NFS_SNAPSHOTTER: "true"
