install cilium via gitops (not kubespray)

--- a/ansible/inventory/homelab/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/ansible/inventory/homelab/group_vars/k8s_cluster/k8s-cluster.yml
@@ -64,7 +64,7 @@ credentials_dir: "{{ inventory_dir }}/credentials"
 
 # Choose network plugin (cilium, calico, kube-ovn or flannel. Use cni for generic cni plugin)
 # Can also be set to 'cloud', which lets the cloud provider setup appropriate routing
-kube_network_plugin: cilium
+kube_network_plugin: cni
 
 # Setting multi_networking to true will install Multus: https://github.com/k8snetworkplumbingwg/multus-cni
 kube_network_plugin_multus: false
