--- a/ansible/inventory/homelab/homelab.ini
+++ b/ansible/inventory/homelab/homelab.ini
@@ -5,7 +5,6 @@ rpi01
 rpi01
 
 [kube_node]
-rpi01
 rpi02
 rpi03 # 1T SSD
 rpi04
@@ -15,3 +14,6 @@ kube_control_plane
 kube_node
 
 [calico_rr]
+
+[all:vars]
+kube_proxy_remove=true
