--- a/k8s/apps/argocd/helm/values.yaml
+++ b/k8s/apps/argocd/helm/values.yaml
@@ -72,11 +72,11 @@ server:
 repoServer:
   resources:
     limits:
-      cpu: 200m
-      memory: 512Mi
+      cpu: 1
+      memory: 1Gi
     requests:
       cpu: 200m
-      memory: 512Mi
+      memory: 256Mi
 
 applicationSet:
   resources:
