deploy rook-ceph-operator + remove prom

--- a/k8s/apps/rook-ceph/kustomization.yaml
+++ b/k8s/apps/rook-ceph/kustomization.yaml
@@ -5,8 +5,8 @@ labels:
     pairs:
       app: rook-ceph
 
-resources: []
-# - generated.yaml
+resources:
+- generated.yaml
 # - ceph-cluster.yaml
 # - ceph-block-pool.yaml
 
